[gd_scene load_steps=4 format=3 uid="uid://v8r1scqb1umu"]

[ext_resource type="Script" path="res://Assets/Scripts/foliage_icon.gd" id="1_e5og4"]
[ext_resource type="Texture2D" uid="uid://qg0cs118g43p" path="res://Assets/Graphics/ASE Files/TreeIcon.png" id="1_n6n6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsvtc"]
size = Vector2(14, 15)

[node name="TreeIcon" type="Node2D"]
script = ExtResource("1_e5og4")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="IconSprite" type="Sprite2D" parent="Sprite2D"]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("1_n6n6q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fsvtc")

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2(0.25, 0.25)

[node name="Label" type="Label" parent="Node2D"]
texture_filter = 1
texture_repeat = 1
offset_left = -50.0
offset_top = 34.0
offset_right = 50.0
offset_bottom = 57.0
text = "Terrance"
horizontal_alignment = 1
vertical_alignment = 3

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
